# MuJoCo-Tutorials

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: mjdata.h  mjmodel.h  mjrender.h  mjui.h  mjvisualize.h  mjxmacro.h  mujoco.h  uitools.c  uitools.h
models/: Acrobot.xml  invertedPendulum.xml
src/: CMakeLists.txt
src/0_preliminaries/: CMakeLists.txt  pd.cpp
src/2.1_LQR/: CMakeLists.txt  LQR-Acrobot.cpp  LQR-Acrobot.h  LQR-pendulum.cpp  Spong-Acrobot.ipynb  Spong-Russ-equivalence.ipynb  simulate.py
